--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
-name = "walrus-hosting-site"
+name = "walrus"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+axum = "0.8.6"
+dotenv = "0.15.0"
+tokio = { version = "1.48.0", features=["rt-multi-thread"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
