--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 axum = "0.8.6"
 dotenv = "0.15.0"
+maud = "0.27.0"
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
