--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ axum = "0.8.6"
 dotenv = "0.15.0"
 maud = "0.27.0"
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
+tower-http = {version = "0.6.6", features=["fs"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
