add homepage router

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
             watch:
                 - path: ./src
                   action: rebuild
+                - path: ./public
+                  action: rebuild
                 - path: ./Cargo.toml
                   action: rebuild
         profiles:
