--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+aes-gcm = "0.10.3"
 anyhow = "1.0.100"
 axum = "0.8.6"
+base64 = "0.22.1"
+chacha20poly1305 = "0.10.1"
 dotenv = "0.15.0"
+hex = "0.4.3"
 maud = "0.27.0"
+rand = "0.9.2"
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
 tower-http = { version = "0.6.6", features=["fs"] }
 tracing = "0.1.41"
