--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ base64 = "0.22.1"
 chacha20poly1305 = "0.10.1"
 dotenv = "0.15.0"
 maud = "0.27.0"
+once_cell = "1.21.3"
 rand = "0.9.2"
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
 tower-http = { version = "0.6.6", features=["fs"] }
