--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,20 @@ anyhow = "1.0.100"
 axum = "0.8.6"
 base64 = "0.22.1"
 chacha20poly1305 = "0.10.1"
+chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
 maud = "0.27.0"
 once_cell = "1.21.3"
 rand = "0.9.2"
+serde = "1.0.228"
+sqlx = { version = "0.8.6", default-features = false, features = [
+    "postgres",
+    "runtime-tokio",
+    "tls-rustls",
+    "chrono",
+    "migrate",
+    "macros",
+] }
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
 tower-http = { version = "0.6.6", features=["fs"] }
 tracing = "0.1.41"
