--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,13 @@
 services:
+    db:
+        image: postgres:16
+        ports:
+            - "5433:5432"
+        environment:
+            POSTGRES_USER: user
+            POSTGRES_HOST_AUTH_METHOD: trust
+            POSTGRES_DB: walrus
+
     walrus:
         build:
             context: .
@@ -9,6 +18,8 @@ services:
             - RUST_ENV=production
         profiles:
             - prod
+        depends_on:
+            - db
 
     walrus-dev:
         build:
@@ -30,3 +41,5 @@ services:
                   action: rebuild
         profiles:
             - dev
+        depends_on:
+            - db
