--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DATABASE_URL=
 
 ## Encryption and Hashing
-ENCRYPTION_KEY="32 bytes"
+ENCRYPTION_KEY="Must be 32 bytes exactly"
 HASH_KEY=
 
 # OAuth
