--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 maud = "0.27.0"
 once_cell = "1.21.3"
 rand = "0.9.2"
+reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
 serde = "1.0.228"
 sqlx = { version = "0.8.6", default-features = false, features = [
     "postgres",
@@ -26,3 +27,4 @@ tokio = { version = "1.48.0", features=["rt-multi-thread"] }
 tower-http = { version = "0.6.6", features=["fs"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+urlencoding = "2.1.3"
