--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 axum = "0.8.6"
+axum-extra = { version = "0.10.3", features = ["cookie"] }
 base64 = "0.22.1"
 chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.42", features = ["serde"] }
@@ -23,8 +24,9 @@ sqlx = { version = "0.8.6", default-features = false, features = [
     "migrate",
     "macros",
 ] }
+time = "0.3.44"
 tokio = { version = "1.48.0", features=["rt-multi-thread"] }
-tower-http = { version = "0.6.6", features=["fs"] }
+tower-http = { version = "0.6.6", features = ["cors", "fs"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 urlencoding = "2.1.3"
